--- a/research/2402.12459.md
+++ b/research/2402.12459.md
@@ -1,7 +1,7 @@
 ---
 title: "Exact black holes in string-inspired Euler-Heisenberg theory"
-collection: publications
-permalink: /publications/2402.12459
+collection: research
+permalink: /research/2402.12459
 date: 2023-02-19
 venue: ''
 citation: '<b><i>A1</i></b>, A2, A3'
